--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
-          <a class="navbar-brand text-hover" href="#">Navbar</a>
+          <a class="navbar-brand text-hover" href="#">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-hover" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-hover" href="#">Features</a>
+                <a class="nav-link text-hover" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-hover" href="#">Planes</a>
