--- a/pages/planes.html
+++ b/pages/planes.html
@@ -14,7 +14,7 @@
             <h3>Básico</h3>
             <p class="price">$9.99/mes</p>
             <ul>
-                <li>✔ 10 GB almacenamiento</li>
+                <li>✔ 100 hs de trabajo</li>
                 <li>✔ Soporte básico</li>
             </ul>
             <button>Seleccionar</button>
@@ -25,7 +25,7 @@
             <h3>Pro</h3>
             <p class="price">$19.99/mes</p>
             <ul>
-                <li>✔ 50 GB almacenamiento</li>
+                <li>✔ 250hs de trabajo</li>
                 <li>✔ Soporte prioritario</li>
                 <li>✔ Acceso premium</li>
             </ul>
@@ -37,7 +37,7 @@
             <h3>Premium</h3>
             <p class="price">$29.99/mes</p>
             <ul>
-                <li>✔ 100 GB almacenamiento</li>
+                <li>✔ 500 horas de trabajo</li>
                 <li>✔ Soporte 24/7</li>
                 <li>✔ Acceso VIP</li>
                 <li>✔ Estadísticas avanzadas</li>
@@ -47,4 +47,4 @@
      </div>
    </div> 
 </body>
-</html>
+</html> 
