--- a/pages/planes.html
+++ b/pages/planes.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
+        <div class="container-fluid">
+          <a class="navbar-brand text-hover" href="/index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link text-hover" href="contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-hover" href="pages/planes.html">Planes</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
   <div class="pricing-section">
      <div class="pricing-banner">
         <!-- Plan 1: Básico -->
@@ -45,6 +64,45 @@
             <button>Seleccionar</button>
         </a>
      </div>
-   </div> 
+   </div>
+   
+   <footer class="bg-dark text-white pt-5 pb-4">
+    <div class="container">
+        <div class="row">
+            <!-- About us -->
+             <div class="col-md-4 mb-4">
+                <h2 class="text-uppercase mb-4">About Us</h2>
+                <p>Somos una empresa dedicada a brindar soluciones digitales innovadoras para nuestros clientes.</p>
+             </div>
+
+             <!-- Contacto -->
+             <div class="col-md-4 mb-4">
+                <h2 class="text-uppercase mb-4">Contacto</h2>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><i class="bi bi-geo-alt-fill"></i> Dirección: Callao 540, Buenos Aires </li>
+                    <li class="mb-2"><i class="bi bi-telephone-fill"></i> Teléfono: +123 456 7890</li>
+                    <li class="mb-2"><i class="bi bi-envelope-fill"></i> Email: webplus@gmail.com</li>
+                </ul>
+            </div>
+            
+            <!-- Enlaces -->
+             <div class="col-md-4 mb-4">
+                <h2 class="text-uppercase mb-4">Enlaces rapidos</h2>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Inicio</a></li>
+                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Servicios</a></li>
+                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Profesionales</a></li>
+                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Referencias</a></li>
+                </ul>
+             </div>
+        </div>
+        <!-- Derechos de autor -->
+        <div class="row pt-3 border-top border-secondary">
+            <div class="col-md-12 text-center">
+            <p class="mb-0">&copy; 2025 WebPlus. Todos los derechos reservados.</p>
+        </div>
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html> 
