--- a/pages/planes.html
+++ b/pages/planes.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
-          <a class="navbar-brand text-hover" href="/index.html">Home</a>
+          <a class="navbar-brand text-hover" href="../index.html">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,7 +20,7 @@
                 <a class="nav-link text-hover" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-hover" href="pages/planes.html">Planes</a>
+                <a class="nav-link text-hover" href="planes.html">Planes</a>
               </li>
             </ul>
           </div>
