cambio btn y mails

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -81,7 +81,7 @@
                 <ul class="list-unstyled">
                     <li class="mb-2"><i class="bi bi-geo-alt-fill"></i> Dirección: Callao 540, Buenos Aires </li>
                     <li class="mb-2"><i class="bi bi-telephone-fill"></i> Teléfono: +123 456 7890</li>
-                    <li class="mb-2"><i class="bi bi-envelope-fill"></i> Email: webplus@gmail.com</li>
+                    <li class="mb-2"><i class="bi bi-envelope-fill"></i> Email: contacto@webplus.com</li>
                 </ul>
             </div>
             
