agrego g-0 a imagenes de index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <main class="container-fluid" style="background-color: rgb(73, 20, 9);">
         <div class="row">
-            <img src="images/photo-1678690832311-bb6e361989ca.jpeg" class="col-sm-12 col-md-6 col-lg-8" alt="">
-            <img src="images/Leonardo_Kino_XL_web_design_with_brown_colors_0.jpg" class="col-sm-12 col-md-6 col-lg-4" alt="">
+            <img src="images/photo-1678690832311-bb6e361989ca.jpeg" class="col-sm-12 col-md-6 col-lg-8 g-0" alt="">
+            <img src="images/Leonardo_Kino_XL_web_design_with_brown_colors_0.jpg" class="col-sm-12 col-md-6 col-lg-4 g-0" alt="">
         </div>
     </main>
 
