--- a/pages/planes.html
+++ b/pages/planes.html
@@ -29,7 +29,7 @@
   <div class="pricing-section">
      <div class="pricing-banner">
         <!-- Plan 1: Básico -->
-        <a href="basico.html" class="pricing-card">
+        <a href="contacto.html" class="pricing-card">
             <h3>Básico</h3>
             <p class="price">$9.99/mes</p>
             <ul>
@@ -40,7 +40,7 @@
         </a>
 
         <!-- Plan 2: Pro -->
-        <a href="pro.html" class="pricing-card">
+        <a href="contacto.html" class="pricing-card">
             <h3>Pro</h3>
             <p class="price">$19.99/mes</p>
             <ul>
@@ -52,7 +52,7 @@
         </a>
 
         <!-- Plan 3: Premium -->
-        <a href="premium.html" class="pricing-card">
+        <a href="contacto.html" class="pricing-card">
             <h3>Premium</h3>
             <p class="price">$29.99/mes</p>
             <ul>
