agregado de margin en contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,11 +36,11 @@
                 <p class="lead">Completa el formulario y nos pondremos en contacto contigo en menos de 24 horas.</p>
                 
                 <div class="mt-5">
-                    <h3><i class="bi bi-telephone me-2"></i> Contacto directo</h3>
+                    <h3><i class="bi bi-telephone me-1"></i> Contacto directo</h3>
                     <p class="mt-3">+123 456 7890</p>
                     
-                    <h3 class="mt-4"><i class="bi bi-envelope me-2"></i> Email</h3>
-                    <p>contacto@webplus.com</p>
+                    <h3 class="mt-3"><i class="bi bi-envelope me-1"></i> Email</h3>
+                    <p class="ms-1"> contacto@webplus.com</p>
                 </div>
             </div>
 
