mejoras en los planes

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -35,6 +35,8 @@
             <ul>
                 <li>✔ 100 hs de trabajo</li>
                 <li>✔ Soporte básico</li>
+                <li><s>✔ Acceso premium</s></li>
+                <li><s>✔ Estadísticas avanzadas</s></li>
             </ul>
             <button>Seleccionar</button>
         </a>
@@ -47,6 +49,7 @@
                 <li>✔ 250hs de trabajo</li>
                 <li>✔ Soporte prioritario</li>
                 <li>✔ Acceso premium</li>
+                <li><s>✔ Estadísticas avanzadas</s></li>
             </ul>
             <button>Seleccionar</button>
         </a>
