--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 
-    <h1 class="container-fluid text-center row col-12 m-0 p-0" style="background-color: rgb(26, 13, 13);">
+    <h1 class="container-fluid text-center row col-12 m-0 p-0 g-0" style="background-color: rgb(26, 13, 13);">
         <img src="images/banner.webp" alt="">
     </h1>
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
-          <a class="navbar-brand text-hover" href="index.html">Home</a>
+          <a class="navbar-brand text-hover pb-2" href="index.html">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
