--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
 <body class="contacto">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
-          <a class="navbar-brand text-hover pb-2" href="../index.html">Home</a>
+          <a class="navbar-brand text-hover pb-2" href="../index.html">WebPlus</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
