cambio index y eliminar imagenes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
 </head>
 <body>
 
-    <h1 class="container-fluid text-center row col-12 m-0 p-0 g-0" style="background-color: rgb(26, 13, 13);">
-        <img src="images/banner.webp" alt="">
-    </h1>
+     <!-- Hero Section con texto introductorio -->
+    <header class="container-fluid py-5" style="background-color: rgb(26, 13, 13); color: white;">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-12 text-center">
+                    <h1 class="display-4 fw-bold mb-4">Soluciones Web Profesionales</h1>
+                    <p class="lead mb-4">
+                        En WebPlus nos especializamos en el desarrollo de sitios web a medida, 
+                        aplicaciones web y soluciones digitales que impulsan tu negocio. 
+                    </p>
+                    <a href="pages/contacto.html" class="btn btn-lg" style="background-color: rgb(83, 25, 14); color: white;">Contáctanos</a>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
@@ -33,6 +45,7 @@
         </div>
       </nav>
 
+    <!-- Main Content -->
     <main class="container-fluid" style="background-color: rgb(73, 20, 9);">
         <div class="row">
             <img src="images/photo-1678690832311-bb6e361989ca.jpeg" class="col-sm-12 col-md-6 col-lg-8 g-0" alt="">
