--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Desarrolo Web</title>
+    <title>Desarrollo Web</title>
 </head>
 <body>
 
      <!-- Hero Section con texto introductorio -->
+     
     <header class="container-fluid py-5" style="background-color: rgb(26, 13, 13); color: white;">
         <div class="container py-5">
             <div class="row align-items-center">
