--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
-          <a class="navbar-brand text-hover pb-2" href="index.html">WebPlus</a>
+          <a class="navbar-brand text-hover pb-2 me-auto" href="index.html">WebPlus</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item me-2">
                 <a class="nav-link text-hover" href="pages/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
@@ -49,8 +49,8 @@
     <!-- Main Content -->
     <main class="container-fluid" style="background-color: rgb(73, 20, 9);">
         <div class="row">
-            <img src="images/photo-1678690832311-bb6e361989ca.jpeg" class="col-sm-12 col-md-6 col-lg-8 g-0" alt="">
-            <img src="images/Leonardo_Kino_XL_web_design_with_brown_colors_0.jpg" class="col-sm-12 col-md-6 col-lg-4 g-0" alt="">
+            <img src="images/photo-1678690832311-bb6e361989ca.jpeg" class="col-sm-12 col-md-6 col-lg-8 g-0" alt="build_your_dreams">
+            <img src="images/Leonardo_Kino_XL_web_design_with_brown_colors_0.jpg" class="col-sm-12 col-md-6 col-lg-4 g-0" alt="desktop_brown">
         </div>
     </main>
 
