agregado de margin en todos los navbar

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -10,13 +10,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(83, 25, 14);">
         <div class="container-fluid">
-          <a class="navbar-brand text-hover pb-2" href="../index.html">WebPlus</a>
+          <a class="navbar-brand text-hover pb-2 me-auto" href="../index.html">WebPlus</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item me-2">
                 <a class="nav-link text-hover" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
