agregado pagina sobre nosotros

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,6 +22,9 @@
               <li class="nav-item">
                 <a class="nav-link text-hover" href="planes.html">Planes</a>
               </li>
+              <li class="nav-item me-2">
+                <a class="nav-link text-hover" href="sobrenosotros.html">Nosotros</a>
+              </li>
             </ul>
           </div>
         </div>
