--- a/pages/planes.html
+++ b/pages/planes.html
@@ -22,10 +22,14 @@
               <li class="nav-item">
                 <a class="nav-link text-hover" href="planes.html">Planes</a>
               </li>
+              <li class="nav-item me-2">
+                <a class="nav-link text-hover" href="sobrenosotros.html">Nosotros</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
+
   <div class="pricing-section">
      <div class="pricing-banner">
         <!-- Plan 1: Básico -->
