--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
               <li class="nav-item">
                 <a class="nav-link text-hover" href="pages/planes.html">Planes</a>
               </li>
+              <li class="nav-item me-2">
+                <a class="nav-link text-hover" href="pages/sobrenosotros.html">Nosotros</a>
+              </li>
             </ul>
           </div>
         </div>
