--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -46,6 +46,7 @@
             color: white;
             border: none;
             padding: 0.5rem 1.5rem;
+            text-transform: none;
         }
         
         .btn-webplus:hover {
