mejora del index

--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -304,7 +304,7 @@
     <!-- Hero Section -->
     <section class="hero-section text-center">
         <div class="container">
-            <h1 class="portfolio-title">Nuestro Portafolio</h1>
+            <h1 class="portfolio-title">Nuestro Portfolio</h1>
             <p class="portfolio-subtitle">Descubre los proyectos que hemos creado para nuestros clientes, combinando diseño innovador, tecnología avanzada y estrategias efectivas.</p>
         </div>
     </section>
@@ -455,7 +455,7 @@
             </div>
             
             <div class="text-center mt-5">
-                <a href="contacto.html" class="btn btn-portfolio-outline btn-lg">¿Quieres algo similar para tu negocio?</a>
+                <a href="contacto.html" class="btn btn-portfolio-outline ">¿Quieres algo similar para tu negocio?</a>
             </div>
         </div>
     </section>
