--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-8 text-center">
                     <h2 class="section-title">Nuestros Servicios</h2>
-                    <p class="lead text-muted">Ofrecemos soluciones digitales completas para llevar tu negocio al siguiente nivel.</p>
+                    <p class="lead txt-p">Ofrecemos soluciones digitales completas para llevar tu negocio al siguiente nivel.</p>
                 </div>
             </div>
             <div class="row g-4">
