--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     <!-- Image Grid Section -->
     <section class="container my-5 py-5">
+    <div class="image-grid-container">
         <div class="image-grid">
             <div class="image-grid-item grid-main">
                 <img src="https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1364&q=80" alt="Desarrollo web moderno">
@@ -94,7 +95,8 @@
                 <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1469&q=80" alt="Equipo de trabajo">
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Services Section -->
     <section class="services-section py-5">
