--- a/pages/planes.html
+++ b/pages/planes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Nuestro Planes - WebPlus</title>
 </head>
 
 
@@ -80,40 +80,43 @@
    </div>
    
    <footer class="bg-dark text-white pt-5 pb-4">
-    <div class="container">
-        <div class="row">
-            <!-- About us -->
-             <div class="col-md-4 mb-4">
-                <h2 class="text-uppercase mb-4">About Us</h2>
-                <p>Somos una empresa dedicada a brindar soluciones digitales innovadoras para nuestros clientes.</p>
-             </div>
+        <div class="container">
+            <div class="row">
+                <!-- About us -->
+                <div class="col-md-4 mb-4">
+                    <h2 class="text-uppercase mb-4">About Us</h2>
+                    <p>Somos una empresa dedicada a brindar soluciones digitales innovadoras para nuestros clientes.</p>
+                </div>
 
-             <!-- Contacto -->
-             <div class="col-md-4 mb-4">
-                <h2 class="text-uppercase mb-4">Contacto</h2>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><i class="bi bi-geo-alt-fill"></i> Dirección: Callao 540, Buenos Aires </li>
-                    <li class="mb-2"><i class="bi bi-telephone-fill"></i> Teléfono: +123 456 7890</li>
-                    <li class="mb-2"><i class="bi bi-envelope-fill"></i> Email: contacto@webplus.com</li>
-                </ul>
-            </div>
+                <!-- Contacto -->
+                <div class="col-md-4 mb-4">
+                    <h2 class="text-uppercase mb-4">Contacto</h2>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><i class="bi bi-geo-alt-fill"></i> Dirección: Callao 540, Buenos Aires </li>
+                        <li class="mb-2"><i class="bi bi-telephone-fill"></i> Teléfono: +123 456 7890</li>
+                        <li class="mb-2"><i class="bi bi-envelope-fill"></i> Email: contacto@webplus.com</li>
+                    </ul>
+                </div>
             
-            <!-- Enlaces -->
-             <div class="col-md-4 mb-4">
-                <h2 class="text-uppercase mb-4">Enlaces rapidos</h2>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Inicio</a></li>
-                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Servicios</a></li>
-                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Profesionales</a></li>
-                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Referencias</a></li>
-                </ul>
-             </div>
+                <!-- Enlaces -->
+                <div class="col-md-4 mb-4">
+                    <h2 class="text-uppercase mb-4">Enlaces rapidos</h2>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Inicio</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Servicios</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Profesionales</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Referencias</a></li>
+                    </ul>
+                </div>
+            </div>
+                <!-- Derechos de autor -->
+            <div class="row pt-3 border-top border-secondary">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0">&copy; 2025 WebPlus. Todos los derechos reservados.</p>
+                </div>
+            </div>
         </div>
-        <!-- Derechos de autor -->
-        <div class="row pt-3 border-top border-secondary">
-            <div class="col-md-12 text-center">
-            <p class="mb-0">&copy; 2025 WebPlus. Todos los derechos reservados.</p>
-        </div>
+    </footer>
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
