--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-md-4">
-                        <div class="service-card card h-100">
-                            <div class="card-body philosophy-item p-5 text-center">
+                        <div class="service-card philosophy-item card h-100">
+                            <div class="card-body p-4 text-center">
                                 <div class="service-icon">
                                     <i class="bi bi-globe"></i>
                                 </div>
