mejoras en cards index

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-md-4">
-                        <div class="service-card philosophy-item card h-100">
+                        <div class="service-card card h-100">
                             <div class="card-body p-4 text-center">
                                 <div class="service-icon">
                                     <i class="bi bi-globe"></i>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-card card philosophy-item h-100">
+                        <div class="service-card card h-100">
                             <div class="card-body p-4 text-center">
                                 <div class="service-icon">
                                     <i class="bi bi-phone"></i>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-card philosophy-item card h-100">
+                        <div class="service-card card h-100">
                             <div class="card-body p-4 text-center">
                                 <div class="service-icon">
                                     <i class="bi bi-graph-up"></i>
